<resources>
    <string name="app_name">Triple Onboarding</string>

    <string name="title_quiz_screen">Triple Quiz</string>
    <string name="title_map_screen">Plattegrond</string>
    <string name="title_dialog_game">YOU did IT!</string>
    <string name="title_info_screen">Informatie</string>
    <string name="title_games_screen">Games</string>
    <string name="title_facts_screen">Feiten &amp; Weetjes</string>
    <string name="title_facts_screen_short">Feiten</string>
    <string name="title_faq_screen">FAQ</string>
    <string name="title_memory_screen">Triple Memory</string>
    <string name="title_department_screen">Afdelingen</string>
    <string name="title_more_screen">Meer</string>
    <string name="title_hours_screen">Urenboek</string>
    <string name="title_video_screen">Video</string>
    <string name="title_sign_in">Inloggen Active Directory</string>

    <string name="description_quiz_done">Met %s heb je het spel succesvol afgerond. Je kan het wel!!</string>
    <string name="description_quiz_highscore">Je highscore is %s</string>
    <string name="description_memory_done">Met %s heb je het spel succesvol afgerond. Topper!!</string>
    <string name="description_memory_highscore">Je highscore is %s.</string>
    <string name="description_memory_image">Een medewerker van Triple</string>
    <string name="description_video_image">Een voorvertoning van de video</string>
    <string name="description_video_play_button">Een knop waarmee de video gestart kan worden</string>
    <string name="description_department_image">Een voorvertoning van de locatie van de afdeling</string>
    <string name="description_department_map">Een kaart waarop de locatie van de afdeling te zien is</string>
    <string name="description_sign_in_image">Een geschrokken Wozzbot</string>
    <string name="description_sign_in">Om verder te gaan moet je inloggen met je Active Directory login. Bijvoorbeeld r.omana@wearetriple.com</string>

    <string name="btn_start_game">Speel het spel</string>
    <string name="btn_leave_game">Stoppen</string>
    <string name="btn_replay_game">Opnieuw spelen</string>
    <string name="btn_close_dialog">Afsluiten</string>
    <string name="btn_sign_in">Inloggen</string>

    <string name="label_game_status">Vraag %1$d/%2$d</string>
    <string name="label_game_score">Score %1$d</string>
    <string name="label_game_highscore">Highscore %1$d</string>
    <string name="label_not_signed_in">Niet Ingelogd</string>

    <string name="placeholder_text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</string>

    <string name="games_quiz">Quiz</string>
    <string name="games_memory">Memory</string>

    <string-array name="correct_answer">
        <item>Goed bezig!!</item>
        <item>Jij weet het!</item>
        <item>Dat is correct!</item>
        <item>Hoppa, je kan het!</item>
    </string-array>

    <string-array name="incorrect_answer">
        <item>Oei, je bent er bijna!</item>
        <item>Dat is niet helemaal correct</item>
        <item>Verkeerde antwoord</item>
    </string-array>

</resources>
