<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/infoFragment">

    <fragment
        android:id="@+id/infoFragment"
        android:name="com.wearetriple.tripleonboarding.ui.info.InfoFragment"
        android:label="@string/title_info_screen"
        tools:layout="@layout/fragment_info" />
    <fragment
        android:id="@+id/mapFragment"
        android:name="com.wearetriple.tripleonboarding.ui.map.MapFragment"
        android:label="@string/title_map_screen"
        tools:layout="@layout/fragment_map" />
    <fragment
        android:id="@+id/gamesFragment"
        android:name="com.wearetriple.tripleonboarding.ui.games.GamesFragment"
        android:label="@string/title_games_screen"
        tools:layout="@layout/fragment_games" >
        <action
            android:id="@+id/action_gamesFragment_to_quizFragment"
            app:destination="@id/quizFragment" />
        <action
            android:id="@+id/action_gamesFragment_to_signInFragment"
            app:destination="@id/signInFragment" />
    </fragment>
    <fragment
        android:id="@+id/factsFragment"
        android:name="com.wearetriple.tripleonboarding.ui.fact.FactFragment"
        android:label="@string/title_facts_screen"
        tools:layout="@layout/fragment_facts" />
    <fragment
        android:id="@+id/moreFragment"
        android:name="com.wearetriple.tripleonboarding.ui.more.MoreFragment"
        android:label="@string/title_more_screen"
        tools:layout="@layout/fragment_more" >
        <action
            android:id="@+id/action_moreFragment_to_faqFragment"
            app:destination="@id/faqFragment" />
        <action
            android:id="@+id/action_moreFragment_to_departmentOverviewFragment"
            app:destination="@id/departmentOverviewFragment" />
        <action
            android:id="@+id/action_moreFragment_to_videoFragment"
            app:destination="@id/videoFragment" />
        <action
            android:id="@+id/action_moreFragment_to_hourBookOverviewFragment"
            app:destination="@id/hourBookOverviewFragment" />
    </fragment>
    <fragment
        android:id="@+id/faqFragment"
        android:name="com.wearetriple.tripleonboarding.ui.faq.FaqFragment"
        android:label="@string/title_faq_screen"
        tools:layout="@layout/fragment_faq" />
    <fragment
        android:id="@+id/departmentOverviewFragment"
        android:name="com.wearetriple.tripleonboarding.ui.department.overview.DepartmentOverviewFragment"
        android:label="@string/title_department_screen" >
        <action
            android:id="@+id/action_departmentOverviewFragment_to_departmentDetailFragment"
            app:destination="@id/departmentDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/departmentDetailFragment"
        android:name="com.wearetriple.tripleonboarding.ui.department.detail.DepartmentDetailFragment"
        android:label="{title}"
        tools:layout="@layout/fragment_department_detail">
        <argument
            android:name="department"
            app:argType="com.wearetriple.tripleonboarding.model.Department" />
        <argument
            android:name="title"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/videoFragment"
        android:name="com.wearetriple.tripleonboarding.ui.video.overview.VideoFragment"
        android:label="@string/title_video_screen"
        tools:layout="@layout/fragment_video" />
    <fragment
        android:id="@+id/hourBookDetailFragment"
        android:name="com.wearetriple.tripleonboarding.ui.hourbook.detail.HourBookDetailFragment"
        android:label="{topic}"
        tools:layout="@layout/content_hour_book_detail">
        <argument
            android:name="hourBookTopic"
            app:argType="com.wearetriple.tripleonboarding.model.HourBookTopic" />
        <argument
            android:name="topic"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/hourBookOverviewFragment"
        android:name="com.wearetriple.tripleonboarding.ui.hourbook.overview.HourBookOverviewFragment"
        android:label="@string/title_hours_screen"
        tools:layout="@layout/fragment_hour_book_overview">
        <action
            android:id="@+id/action_hourBookOverviewFragment_to_hourBookDetailFragment"
            app:destination="@id/hourBookDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/memoryFragment"
        android:name="com.wearetriple.tripleonboarding.ui.games.memory.MemoryFragment"
        android:label="@string/title_memory_screen"
        tools:layout="@layout/fragment_memory" >
        <action
            android:id="@+id/action_memoryFragment_to_gamesFragment"
            app:destination="@id/gamesFragment"
            app:popUpTo="@id/gamesFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/quizFragment"
        android:name="com.wearetriple.tripleonboarding.ui.games.quiz.QuizFragment"
        android:label="@string/title_quiz_screen"
        tools:layout="@layout/fragment_quiz" />
    <fragment
        android:id="@+id/signInFragment"
        android:name="com.wearetriple.tripleonboarding.ui.signin.SignInFragment"
        android:label="@string/title_sign_in"
        tools:layout="@layout/fragment_sign_in" >
        <action
            android:id="@+id/action_signInFragment_to_memoryFragment"
            app:destination="@id/memoryFragment"
            app:popUpTo="@id/gamesFragment" />
    </fragment>
</navigation>