<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppTheme.Layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    tools:context=".ui.games.GamesFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvQuiz"
        style="@style/AppTheme.Widget.CardView.ItemView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            style="@style/AppTheme.Layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                style="@style/AppTheme.Text.Large"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="50"
                android:gravity="center_vertical"
                android:text="@string/games_quiz" />

            <Button
                android:id="@+id/btnStartQuiz"
                style="@android:style/Widget.Material.Light.Button.Borderless.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:gravity="center_vertical"
                android:text="@string/btn_start_game"
                android:textAlignment="viewEnd"
                tools:ignore="RtlCompat" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvMemory"
        style="@style/AppTheme.Widget.CardView.ItemView"
        android:layout_marginTop="@dimen/default_view_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvQuiz">

        <LinearLayout
            style="@style/AppTheme.Layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                style="@style/AppTheme.Text.Large"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="50"
                android:gravity="center_vertical"
                android:text="@string/games_memory" />

            <Button
                android:id="@+id/btnStartMemory"
                style="@android:style/Widget.Material.Light.Button.Borderless.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:gravity="center_vertical"
                android:text="@string/btn_start_game"
                android:textAlignment="viewEnd"
                tools:ignore="RtlCompat" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>