<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppTheme.Layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.signin.SignInFragment">

    <ProgressBar
        android:id="@+id/pbActivity"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clSignIn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/sign_in_image_size"
            android:contentDescription="@string/description_sign_in_image"
            android:src="@drawable/signin_screen_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTitleSignIn"
            style="@style/AppTheme.Text.Custom.TitleSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_not_signed_in"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/tvDescriptionSignIn"
            style="@style/AppTheme.Text.Custom.DescriptionSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description_sign_in"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitleSignIn" />

        <Button
            android:id="@+id/btnSignIn"
            style="@style/AppTheme.Widget.Button.Round.Pink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sign_in_button_margin"
            android:text="@string/btn_sign_in"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDescriptionSignIn" />


        <Button
            android:id="@+id/btn_removeAccount"
            style="@style/AppTheme.Widget.Button.Round.Pink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:enabled="false"
            android:gravity="center"
            android:text="Sign Out"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSignIn" />

        <Button
            android:id="@+id/btn_callGraphInteractively"
            style="@style/AppTheme.Widget.Button.Round.Pink"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:enabled="false"
            android:text="Graph Data Interactively"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@+id/btn_callGraphSilently"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_removeAccount" />

        <Button
            android:id="@+id/btn_callGraphSilently"
            style="@style/AppTheme.Widget.Button.Round.Pink"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:enabled="false"
            android:text="Graph Data Silently"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_callGraphInteractively"
            app:layout_constraintTop_toBottomOf="@+id/btn_removeAccount" />

        <TextView
            android:id="@+id/current_user"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:paddingLeft="5dp"
            android:text="None"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_callGraphInteractively" />

        <TextView
            android:id="@+id/txt_log"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            android:text="Output goes here..."
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/current_user" />

        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            tools:context=".ui.signin.SignInFragment">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:context=".ui.signin.SignInFragment">

                <LinearLayout
                    android:id="@+id/activity_main"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/default_layout_padding"
                    android:paddingRight="@dimen/default_layout_padding"
                    android:paddingBottom="@dimen/default_layout_padding">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:weightSum="10">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="3"
                            android:text="Scope"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="7"
                            android:orientation="vertical">

                            <EditText
                                android:id="@+id/scope"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="user.read"
                                android:textSize="12sp" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingLeft="5dp"
                                android:text="Type in scopes delimited by space"
                                android:textSize="10sp" />

                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:weightSum="10">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="3"
                            android:text="MSGraph Resource URL"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="7"
                            android:orientation="vertical">

                            <EditText
                                android:id="@+id/msgraph_url"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="https://graph.microsoft.com/v1.0/me"
                                android:textSize="12sp" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:weightSum="10">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:text="Signed-in user"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:weightSum="10">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:text="Device Mode"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/device_mode"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="7"
                            android:paddingLeft="5dp"
                            android:text="Non-shared" />
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:weightSum="10">

                        <Button
                            android:id="@+id/btn_signIn2"
                            style="@style/AppTheme.Widget.Button.Round.Pink"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="5"
                            android:gravity="center"
                            android:text="Sign In" />

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                    </LinearLayout>


                </LinearLayout>
            </LinearLayout>

        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>